--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <!-- You can add your profile image here -->
              <img src="headshot.jpg" alt="Omer Junedi" class="profile-img">
             <h1>Omer Junedi</h1>
-<p class="tagline">Computer Science & Mathematics Student | Machine Learning Enthusiast | Problem Solver</p>
+<p class="tagline">cs & math @ umich</p>
             <div class="header-animation">
                 <div class="animated-circle"></div>
             </div>
@@ -330,8 +330,8 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <p>I am a Computer Science and Mathematics student at the University of Michigan, passionate about exploring the fascinating intersection between mathematical theory and computational applications. My academic journey has been driven by a deep curiosity for how abstract mathematical concepts can be translated into practical solutions through programming.</p>
-                <p>I'm particularly drawn to machine learning and artificial intelligence, where I've had the opportunity to work on projects ranging from AI-powered teaching assistants to synthetic data generation for healthcare applications. My experience as a Research Assistant at the University of Michigan's Statistical Online Computational Resource has allowed me to apply mathematical principles to solve real-world data privacy challenges.</p>
-                <p>Whether I'm developing a raytracing engine from scratch, building data analytics tools, or creating intelligent applications, I enjoy the process of transforming complex problems into elegant solutions. I believe that the combination of rigorous mathematical thinking and creative programming approaches is key to advancing technology in meaningful ways.</p>
+                <!--<p>I'm particularly drawn to machine learning and artificial intelligence, where I've had the opportunity to work on projects ranging from AI-powered teaching assistants to synthetic data generation for healthcare applications. My experience as a Research Assistant at the University of Michigan's Statistical Online Computational Resource has allowed me to apply mathematical principles to solve real-world data privacy challenges.</p>-->
+                <!--<p>Whether I'm developing a raytracing engine from scratch, building data analytics tools, or creating intelligent applications, I enjoy the process of transforming complex problems into elegant solutions. I believe that the combination of rigorous mathematical thinking and creative programming approaches is key to advancing technology in meaningful ways.</p>-->
             </div>
         </section>
 
@@ -351,7 +351,7 @@
             <div class="experience-item">
                 <div class="date">May 2025 - Aug 2025</div>
                 <div class="company">Harman International</div>
-                <div class="position">Incoming Product Management Intern</div>
+                <div class="position">Incoming Product/Software Intern</div>
                 <ul>
                     <li>Summer 2025 Connectivity Product Line</li>
                 </ul>
