--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
             transform: translateY(-3px);
             box-shadow: 0 5px 10px rgba(0,0,0,0.1);
         }
+        .skill-tag {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease, transform 0.5s ease, background-color 0.3s, color 0.3s, box-shadow 0.3s;
+        }
+        .skill-tag.animate {
+            opacity: 1;
+            transform: translateY(0);
+        }
         .experience-item, .education-item, .project-item {
             margin-bottom: 35px;
             border-left: 3px solid #3498db;
