--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
             <h2>Work Experience</h2>
 
             <div class="experience-item">
-                <div class="date">May 2025 - Aug 2025</div>
-                <div class="company">Harman International</div>
-                <div class="position">Incoming Product/Software Intern</div>
+                <div class="date">Jun 2025 - Aug 2025</div>
+                <div class="company">Cisco</div>
+                <div class="position">Software Engineering Intern</div>
                 <ul>
-                    <li>Summer 2025 Connectivity Product Line</li>
+                    <li>Commerce Engineering. Agentic AI in Cash Flow Applications</li>
                 </ul>
             </div>
 
